# python-test-template

./: README.md  pyproject.toml
src/python_test_template/: cli.py  dummy.py  parse_code.py  parse_paths.py  template_writer.py
tests/python_test_template/: test___init__.py  test_cli.py  test_dummy.py  test_parse_code.py  test_parse_paths.py  test_template_writer.py
