[project]
name = "python-test-template"
version = "0.0.1"
authors = [
  { name="Sugil Steve Lee", email="sugilmath@gmail.com" },
]
description = "Writing functions are fun, writing test files for those functions are boring. This helps that."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/leesugil/python-test-template"
Issues = "https://github.com/leesugil/python-test-template/issues"

[project.scripts]
python-test-template = "python_test_template.cli:main"
